# humanitys-last-game

./: .gitignore  AGENTS.md  README.md  agent.py  agent_logger.py  main.py  mgw_call.sh  model_list.txt  models.py  observability.py  pyproject.toml  simulate.py  system_prompt.md  verify_solutions.py
data/: leaderboard.json  solutions.json
docs/: actions.mdx  agents-quickstart.mdx  api-keys.mdx  available-levels.mdx  benchmarking-agent.mdx  changelog.mdx  contributing.mdx  create-agent.mdx  docs.json  feature-requests.mdx  full-play-test.mdx  hlg-challenge-2026.mdx  hlg-openapi.yaml  hlg.mdx  index.mdx  leaderboard.mdx  level-schema.mdx  llm_agents.mdx  llms.txt  local-vs-online.mdx  methodology.mdx  package.json  rate_limits.mdx  recordings.mdx  rest_overview.mdx  scorecards.mdx  swarms.mdx  vocabulary.mdx
engine/: __init__.py  solver.py  state.py  validator.py
hlg/: __init__.py  actions.py  arcade.py  environment.py  scorecard.py  scoring.py
levels/: README.md  level0.txt  level1.txt  level10.txt  level11.txt  level12.txt  level13.txt  level14.txt  level15.txt  level16.txt  level17.txt  level18.txt  level19.txt  level2.txt  level20.txt  level21.txt  level22.txt  level23.txt  level24.txt  level25.txt  level26.txt  level27.txt  level28.txt  level29.txt  level3.txt  level30.txt  level31.txt  level32.txt  level33.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt
logs/: run_20260412T120433Z.jsonl  run_20260412T120806Z.jsonl  run_20260412T120922Z.jsonl  run_20260412T121029Z.jsonl  run_20260412T121059Z.jsonl  run_20260412T121325Z.jsonl
paper/: Makefile  main.tex  references.bib
scripts/: build_logos.py  build_paper_assets.py  compute_rhae.py  extract_leaderboard.py  render_level_image.py  scrape_arc_templates.py  setup_github_org.sh
(+50 files in other folders)
