[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlg"
version = "0.1.0"
description = "Humanity's Last Game — an agentic spatial-reasoning benchmark of 34 Bloxorz levels."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anvay Vats" }]
keywords = ["benchmark", "agents", "llm", "evaluation", "bloxorz", "agi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core SDK has zero runtime dependencies. Provider adapters land in v0.2.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
figures = [
    "pillow>=10.0",
    "matplotlib>=3.8",
    "graphviz>=0.20",
]

[project.urls]
Homepage = "https://github.com/vats98754/humanitys-last-game"
Documentation = "https://hlg-docs.example.dev"
Repository = "https://github.com/vats98754/humanitys-last-game"
"Bug Tracker" = "https://github.com/vats98754/humanitys-last-game/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hlg*", "engine*"]
exclude = ["docs*", "paper*", "scripts*", "logs*", "data*", "levels*", "tests*"]

[tool.setuptools.package-data]
hlg = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
